# transcriptomics-pipeline

./: README.md  pyproject.toml
data/raw/: PRJNA216008_runs.txt
docs/: sra_abbreviations.md
src/transcriptomics_pipeline/: __init__.py  cli.py  fetcher.py  logger.py  readers.py
tests/: test_bioproject.py  test_fetcher.py  test_logger.py  test_readers.py
