[tool.poetry]
name = "transcriptomics-pipeline"
version = "0.1.0"
description = "Pipeline flexível para baixar FASTQ de ENA/SRA a partir de tabelas de amostras."
authors = ["JessPy <jbodartguimaraes@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/jesspy/transcriptomics-pipeline"
repository = "https://github.com/jesspy/transcriptomics-pipeline"
documentation = "https://github.com/jesspy/transcriptomics-pipeline"
packages = [{include = "transcriptomics_pipeline", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
typer = ">=0.27.0,<0.28.0"
rich = ">=15.0.0,<16.0.0"
httpx = ">=0.28.1,<0.29.0"
openpyxl = ">=3.1.3,<4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.1.1,<10.0.0"
ruff = ">=0.15.22,<0.16.0"

[tool.poetry.scripts]
transcriptomics-pipeline = "transcriptomics_pipeline.cli:app"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "C", "Q", "B", "I"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
